--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/core": "^7.2.0",
+    "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/plugin-proposal-decorators": "^7.2.0",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
@@ -43,7 +43,6 @@
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.4.2",
-    "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-add-module-exports": "^1.0.0",
@@ -74,6 +73,7 @@
     "postcss": "^7.0.6",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.15.3",
+    "regenerator-runtime": "^0.13.1",
     "rimraf": "^2.6.2",
     "rucksack-css": "^1.0.2",
     "through2": "^3.0.0",
@@ -101,11 +101,17 @@
     "jest": "^23.6.0",
     "pre-commit": "1.x"
   },
+  "resolutions": {
+    "babel-core": "7.0.0-bridge.0"
+  },
   "peerDependencies": {
     "typescript": ">=2.2.1"
   },
   "pre-commit": [
     "lint",
     "prettier"
-  ]
+  ],
+  "jest": {
+    "transform": {}
+  }
 }
